force-app/main/default/objects/ServiceAppointmentFormRule__c/ServiceAppointmentFormRule__c.object-meta.xml
<CustomObject>
    <description>This object defines the conditions and rules used to determine whether a form should be displayed for a Service Appointment, and which specific form to show</description>
    <label>Service Appointment Form Rule</label>
    <nameField>
        <label>Service Appointment Form Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Appointment Form Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>