force-app/main/default/objects/ServiceAppointmentFormRule__c/fields/Email_Template_Name_Mtl__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Name_Mtl__c</fullName>
    <label>Email Template Name Mtl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>