force-app/main/default/objects/ServiceAppointmentFormRule__c/fields/Expiration_Time_Montreal__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Time_Montreal__c</fullName>
    <label>Expiration Time (Montreal)</label>
    <type>Time</type>
</CustomField>