force-app/main/default/objects/ServiceAppointmentFormRule__c/fields/Expiration_Time_Quebec__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Time_Quebec__c</fullName>
    <label>Expiration Time (Quebec)</label>
    <type>Time</type>
</CustomField>