force-app/main/default/objects/ServiceAppointmentFormRule__c/fields/fff__c.field-meta.xml
<CustomField>
    <fullName>fff__c</fullName>
    <formula>HOUR( Expiration_Time_Quebec__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>