force-app/main/default/objects/ServiceAppointmentFormRule__c/fields/Form_Name__c.field-meta.xml
<CustomField>
    <fullName>Form_Name__c</fullName>
    <label>Form Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Form_Name</valueSetName>
    </valueSet>
</CustomField>