force-app/main/default/objects/ServiceAppointmentFormRule__c/fields/Montreal_Expiration_Days__c.field-meta.xml
<CustomField>
    <fullName>Montreal_Expiration_Days__c</fullName>
    <label>Days Until Expiration (Montreal)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>