force-app/main/default/objects/ServiceAppointmentFormRule__c/fields/Quebec_Expiration_Days__c.field-meta.xml
<CustomField>
    <fullName>Quebec_Expiration_Days__c</fullName>
    <label>Days Until Expiration (Quebec)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>