force-app/main/default/objects/ServiceAppointmentFormRule__c/fields/Service_Appointment_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Status__c</fullName>
    <label>Service Appointment Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Waiting for customer confirmation</fullName>
            </value>
            <value>
                <fullName>Analysis by office</fullName>
            </value>
            <value>
                <fullName>To be rescheduled</fullName>
            </value>
            <value>
                <fullName>En route</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Requires another appointment</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cannot Complete</fullName>
            </value>
            <value>
                <fullName>Dispatched</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Confirmed by technician</fullName>
            </value>
            <value>
                <fullName>Payment Analysis</fullName>
            </value>
            <value>
                <fullName>Analyse de Payment</fullName>
            </value>
            <value>
                <fullName>Awaiting for Payment</fullName>
            </value>
            <value>
                <fullName>Completed &amp; Paid</fullName>
            </value>
            <value>
                <fullName>Refused by costumer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>