force-app/main/default/objects/ServiceAppointmentFormRule__c/fields/wtg__c.field-meta.xml
<CustomField>
    <fullName>wtg__c</fullName>
    <label>WTG</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WTG</valueSetName>
    </valueSet>
</CustomField>